--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyDNdG3HugsR3Y814e_EzkN3OJlaVe_PYlU"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
